--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
         "https://www.darkelf.cz/*"
       ],
       "js": [
-        "content.js"
+        "spell-results.js",
+        "old-scripts.js"
       ],
       "all_frames": true,
       "run_at": "document_idle"
